--- a/src/todolist/ListItem.css
+++ b/src/todolist/ListItem.css
@@ -1,7 +1,7 @@
 .list-item-container{
     border-style: solid;
     border-width: medium;
-    padding: 10x;
-    margin: 10x;
+    padding: 25px;
+    margin: 50px;
     width: 33%;
 }
