--- a/src/todolist/NewItemForm.css
+++ b/src/todolist/NewItemForm.css
@@ -1,7 +1,12 @@
 .new-list-input{
     padding: 10x;
-    margin: 10px 0;
+    margin: 10px;
     border: 2px solid #eee;
     border-radius: 10px;
     width: 33%;
+}
+
+.new-list-form{
+    padding: 25px;
+    margin: 50px;
 }
