--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  margin: 1rem;
+  padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
   color: #222222;
   background-color: cyan;
