--- a/src/todolist/ListItem.css
+++ b/src/todolist/ListItem.css
@@ -1,10 +1,19 @@
-.list-item-container{
+.list-item-container-complete{
     border-style: solid;
     border-width: medium;
     padding: 25px;
     margin: 50px;
     width: 33%;
     background-color: darkgrey;
+}
+
+.list-item-container{
+    border-style: solid;
+    border-width: medium;
+    padding: 25px;
+    margin: 50px;
+    width: 33%;
+    background-color:lightgray;
 }
 
 .complete-button{
